<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddStoriesActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/photoResult"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/noimage"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/post_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:inputType="text"
            android:hint="@string/isi_deskripsi_dari_story"
            app:layout_constraintTop_toBottomOf="@id/photoResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Ini adalah deskripsi"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_or_take_photo"
            android:textAlignment="center"
            android:textSize="16sp"
            android:fontFamily="monospace"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_desc"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/select_or_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_or_take_photo"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_text"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_or_take_photo">

            <Button
                android:id="@+id/camera_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_camerax"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/intent_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intent_camera"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/intent_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intent_gallery"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/upload_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_your_photo"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/use_loc_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"/>

        <TextView
            android:id="@+id/use_loc_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_location"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/upload_photo"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/maps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintTop_toBottomOf="@+id/use_loc_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/upload_button"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/ic_baseline_cloud_upload_24"
            app:layout_constraintTop_toBottomOf="@+id/upload_photo"
            app:layout_constraintStart_toEndOf="@+id/maps_button"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>