<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.StoryDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_stories_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:transitionName="img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_by_text"
            android:maxLines = "2"
            android:layout_marginTop="16dp"
            android:transitionName="name"
            app:layout_constraintTop_toBottomOf="@id/detail_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/uploaded_from"
            android:layout_marginTop="16dp"
            android:transitionName="name"
            app:layout_constraintTop_toBottomOf="@id/detail_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/title_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story_description"
            android:maxLines = "10"
            android:scrollbars="vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toBottomOf="@id/detail_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_the_desc"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintTop_toBottomOf="@id/title_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>